# pulse

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/pulse-core/: build.rs
crates/pulse-core/src/: error.rs  lib.rs  main.rs
crates/pulse-core/src/audio/: capture.rs  resample.rs  vad.rs
crates/pulse-core/src/engine/: formatter.rs  learning.rs  metrics.rs
crates/pulse-core/src/platform/: accessibility.rs  apps.rs  hotkey.rs  indicator.rs  mod.rs
crates/pulse-core/src/providers/: completion.rs  coreml_whisper.rs  local_whisper.rs  mod.rs  moonshine.rs  openai.rs  transcription.rs
crates/pulse-core/src/storage/: migrations.rs
crates/pulse-core/src/types/: contacts.rs  corrections.rs  mod.rs  modes.rs  shortcuts.rs
crates/pulse-core/swift/: indicator.swift
crates/pulse-core/swift/WhisperHelper/: Package.swift
crates/pulse-core/swift/WhisperHelper/Sources/: main.swift
crates/pulse-core/tests/: e2e.rs  formatter.rs
src/: index.html  lib.rs  main.rs  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  worker.rs
src/audio/: capture.rs  mod.rs  resample.rs  vad.rs
src/engine/: contacts.rs  formatter.rs  learning.rs  mod.rs  modes.rs  shortcuts.rs
src/platform/: mod.rs  paste.rs
src/providers/: local_whisper.rs  mod.rs  moonshine.rs
src/src/: api.ts  main.ts  state.ts  style.css  types.ts
src/storage/: db.rs  mod.rs
src/types/: analytics.rs  app.rs  modes.rs  transcription.rs
tests/: e2e.rs  formatter.rs
