[package]
name = "pulse"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Audio capture
cpal = "0.17.1"
hound = "3.5"

# ML inference (pure Rust with Apple Silicon acceleration)
candle-core = { version = "0.9", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9", features = ["metal", "accelerate"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
byteorder = "1.5"
hf-hub = "0.4"

# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage & data
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "serde"] }

# Error handling & logging
anyhow = "1"
thiserror = "2.0"
tracing = "0.1"

# Text processing
aho-corasick = "1.1"
strsim = "0.11"
regex = "1"

# Concurrency
parking_lot = "0.12"

# Config
dirs = "6.0"
dotenvy = "0.15"
