[package]
name = "pulse-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Pulse"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pulse = { path = "../crates/pulse-core" }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
parking_lot = "0.12"
tracing = "0.1"
anyhow = "1"
dirs = "6.0"
dotenvy = "0.15"
